[gd_scene load_steps=8 format=2]

[ext_resource path="res://hud.gd" type="Script" id=1]
[ext_resource path="res://art/objects/bullet.png" type="Texture" id=2]
[ext_resource path="res://art/objects/bullet_bw.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "notif_appear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Notification:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "notif_disappear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Notification:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/notif_appear = SubResource( 1 )
anims/notif_disappear = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Bulets" type="Node" parent="."]

[node name="Bullets" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="Bullets"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 798.257
margin_top = 457.312
margin_right = 1270.26
margin_bottom = 579.312
rect_scale = Vector2( 0.214139, 0.214139 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect0" type="TextureRect" parent="Bullets/HBoxContainer2"]
margin_right = 64.0
margin_bottom = 122.0
texture = ExtResource( 3 )

[node name="TextureRect1" type="TextureRect" parent="Bullets/HBoxContainer2"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 122.0
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Bullets/HBoxContainer2"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 122.0
texture = ExtResource( 3 )

[node name="TextureRect3" type="TextureRect" parent="Bullets/HBoxContainer2"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 122.0
texture = ExtResource( 3 )

[node name="TextureRect4" type="TextureRect" parent="Bullets/HBoxContainer2"]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 122.0
texture = ExtResource( 3 )

[node name="TextureRect5" type="TextureRect" parent="Bullets/HBoxContainer2"]
margin_left = 340.0
margin_right = 404.0
margin_bottom = 122.0
texture = ExtResource( 3 )

[node name="TextureRect6" type="TextureRect" parent="Bullets/HBoxContainer2"]
margin_left = 408.0
margin_right = 472.0
margin_bottom = 122.0
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Bullets"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 798.257
margin_top = 457.312
margin_right = 1202.26
margin_bottom = 579.312
rect_scale = Vector2( 0.214139, 0.214139 )
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect0" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_right = 64.0
margin_bottom = 122.0
texture = ExtResource( 2 )

[node name="TextureRect1" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 122.0
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 122.0
texture = ExtResource( 2 )

[node name="TextureRect3" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 204.0
margin_right = 268.0
margin_bottom = 122.0
texture = ExtResource( 2 )

[node name="TextureRect4" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 272.0
margin_right = 336.0
margin_bottom = 122.0
texture = ExtResource( 2 )

[node name="TextureRect5" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 340.0
margin_right = 404.0
margin_bottom = 122.0
texture = ExtResource( 2 )

[node name="TextureRect6" type="TextureRect" parent="Bullets/HBoxContainer"]
margin_left = 408.0
margin_right = 472.0
margin_bottom = 122.0
texture = ExtResource( 2 )

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -100.0
margin_right = -10.0
margin_bottom = 101.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="HealthBar" to="." method="_on_HealthBar_value_changed"]
